--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
 
     testCompile 'com.sun.jersey:jersey-client:1.19'
     testCompile 'com.sun.jersey:jersey-grizzly2:1.19'
+    testCompile 'com.sun.jersey:jersey-test-framework:1.19'
+
+    testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.22.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
