--- a/build.gradle
+++ b/build.gradle
@@ -11,15 +11,14 @@ targetCompatibility = 1.7
 dependencies {
 	//compile 'ch.qos.logback:logback-classic:1.1.3'
 
-    compile 'javax.servlet:servlet-api:2.5'
-    compile 'com.sun.jersey:jersey-server:1.19'
-    compile 'com.sun.jersey.contribs:jersey-guice:1.19'
+    compile 'javax.servlet:servlet-api:3.0'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.22.1'
 
-    testCompile 'com.sun.jersey:jersey-client:1.19'
-    testCompile 'com.sun.jersey:jersey-grizzly2:1.19'
-    testCompile 'com.sun.jersey:jersey-test-framework:1.19'
+    testCompile 'org.glassfish.jersey.core:jersey-client:2.22.1'
+    testCompile 'org.glassfish.jersey.test-framework:jersey-test-framework-core:2.22.1'
 
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.22.1'
+    testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-jetty:2.22.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
