--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,10 @@ targetCompatibility = 1.7
 dependencies {
 	//compile 'ch.qos.logback:logback-classic:1.1.3'
 
-    compile 'javax.servlet:servlet-api:3.0'
-    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.22.1'
+    // javax.servlet:javax.servlet-api:3.0.1 -> 3.1.0
+
+    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.22.1'
 
     testCompile 'org.glassfish.jersey.core:jersey-client:2.22.1'
     testCompile 'org.glassfish.jersey.test-framework:jersey-test-framework-core:2.22.1'
