--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,6 @@ targetCompatibility = 1.7
 dependencies {
 	//compile 'ch.qos.logback:logback-classic:1.1.3'
 
-    // javax.servlet:javax.servlet-api:3.0.1 -> 3.1.0
-
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.22.1'
 
@@ -22,19 +20,37 @@ dependencies {
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.22.1'
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-jetty:2.22.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    // integration testing
+    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.52.0'
+    testCompile group: 'com.paulhammant', name: 'ngwebdriver', version: '0.9.5'
 }
 
 repositories {
     mavenCentral()
 }
 
+sourceSets {
+//    integrationTest {
+//        java {
+//            compileClasspath += main.output + test.output
+//            runtimeClasspath += main.output + test.output
+//            srcDir file('src/integrationTest/java')
+//        }
+//        resources.srcDir file('src/integrationTest/resources')
+//    }
+    test {
+        java {
+            srcDirs += file('src/integrationTest/java')
+        }
+    }
+}
+
 // Embeded Jetty for testing
 jettyRun{
-	// contextPath = "spring4"
 	httpPort = 8888
 }
 
 jettyRunWar{
-	// contextPath = "spring4"
 	httpPort = 8888
 }
