--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,16 +10,6 @@
         A simple application with many layers to show how to test each layer.
     </description>
 
-
-    <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
-
-    <error-page>
-        <error-code>404</error-code>
-        <location>/notFound.html</location>
-    </error-page>
-
     <filter>
         <filter-name>Jersey Filter</filter-name>
         <filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>
@@ -31,17 +21,29 @@
             <param-name>jersey.config.servlet.filter.staticContentRegex</param-name>
             <param-value>(/.*html)|(/.*js)</param-value>
         </init-param>
-
-        <!-- Override init parameter to avoid nasty -->
-        <!-- file locking issue on windows.         -->
-        <init-param>
-            <param-name>useFileMappedBuffer</param-name>
-            <param-value>false</param-value>
-        </init-param>
     </filter>
     <filter-mapping>
         <filter-name>Jersey Filter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+
+    <welcome-file-list>
+        <welcome-file>/index.html</welcome-file>
+    </welcome-file-list>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/notFound.html</location>
+    </error-page>
+
+    <servlet>
+        <!-- Override init parameter to avoid nasty -->
+        <!-- file locking issue on windows.         -->
+        <servlet-name>default</servlet-name>
+        <init-param>
+            <param-name>useFileMappedBuffer</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
 </web-app>
