--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,26 @@
+buildscript {
+    repositories {
+        jcenter()
+        // enable this to use snapshot versions of Gretty:
+        // maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local' }
+    }
+
+    dependencies {
+        classpath 'org.akhikhl.gretty:gretty:+'
+    }
+}
 version = '1.0'
 group = 'co.tyec.layeredTestingExamples'
 
 apply plugin: 'java'
 apply plugin: 'war'
-apply plugin: 'jetty'
+apply plugin: 'org.akhikhl.gretty'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 dependencies {
-	//compile 'ch.qos.logback:logback-classic:1.1.3'
+    //compile 'ch.qos.logback:logback-classic:1.1.3'
 
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.22.1'
@@ -42,15 +53,54 @@ sourceSets {
     test {
         java {
             srcDirs += file('src/integrationTest/java')
+            srcDirs += file('src/restTest/java')
+        }
+        resources {
+            srcDirs += file('src/integrationTest/resources')
+            srcDirs += file('src/restTest/resources')
         }
     }
 }
 
-// Embeded Jetty for testing
-jettyRun{
-	httpPort = 8888
+gretty {
+    port = 8888
 }
 
-jettyRunWar{
-	httpPort = 8888
+// Unit test
+test {
+    exclude "**/*IntegrationTest.*"
+    exclude "**/*RestTest.*"
+    //outputs.upToDateWhen { false }
+}
+task integrationTest(type: Test) {
+    group 'verification'
+    dependsOn 'test', 'restTest', 'appBeforeIntegrationTest'
+    finalizedBy 'appAfterIntegrationTest'
+    mustRunAfter 'test', 'restTest'
+    testClassesDir = sourceSets.test.output.classesDir
+    classpath = sourceSets.test.runtimeClasspath
+    include "**/*IntegrationTest.*"
+}
+
+task restTest(type: Test) {
+    group 'verification'
+    dependsOn 'test'
+    testClassesDir = sourceSets.test.output.classesDir
+    classpath = sourceSets.test.runtimeClasspath
+    // include is file path in out classes output dir.
+    // which is really annoying, because you don't know which sourceDir it came from
+    include "**/*RestTest.*"
+}
+
+
+check {
+    dependsOn 'integrationTest'
+    dependsOn 'restTest'
+}
+
+tasks.withType(Test) {
+    testLogging {
+        events 'started', 'passed', 'failed', 'skipped'
+    }
+    reports.html.destination = file("${reporting.baseDir}/${name}")
 }
