--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,11 @@ dependencies {
 
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.22.1'
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-jetty:2.22.1'
+    testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-inmemory:2.22.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
+    testCompile 'org.glassfish.hk2:hk2-testing:2.4.0-b31'
+    testCompile 'org.glassfish.hk2:hk2-junitrunner:2.4.0-b31'
 
     // integration testing
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.52.0'
@@ -42,21 +46,21 @@ repositories {
 }
 
 sourceSets {
-//    integrationTest {
+//    e2eTest {
 //        java {
 //            compileClasspath += main.output + test.output
 //            runtimeClasspath += main.output + test.output
-//            srcDir file('src/integrationTest/java')
+//            srcDir file('src/e2eTest/java')
 //        }
-//        resources.srcDir file('src/integrationTest/resources')
+//        resources.srcDir file('src/e2eTest/resources')
 //    }
     test {
         java {
-            srcDirs += file('src/integrationTest/java')
+            srcDirs += file('src/e2eTest/java')
             srcDirs += file('src/restTest/java')
         }
         resources {
-            srcDirs += file('src/integrationTest/resources')
+            srcDirs += file('src/e2eTest/resources')
             srcDirs += file('src/restTest/resources')
         }
     }
@@ -68,18 +72,18 @@ gretty {
 
 // Unit test
 test {
-    exclude "**/*IntegrationTest.*"
+    exclude "**/*E2eTest.*"
     exclude "**/*RestTest.*"
     //outputs.upToDateWhen { false }
 }
-task integrationTest(type: Test) {
+task e2eTest(type: Test) {
     group 'verification'
     dependsOn 'test', 'restTest', 'appBeforeIntegrationTest'
     finalizedBy 'appAfterIntegrationTest'
     mustRunAfter 'test', 'restTest'
     testClassesDir = sourceSets.test.output.classesDir
     classpath = sourceSets.test.runtimeClasspath
-    include "**/*IntegrationTest.*"
+    include "**/*E2eTest.*"
 }
 
 task restTest(type: Test) {
@@ -94,7 +98,7 @@ task restTest(type: Test) {
 
 
 check {
-    dependsOn 'integrationTest'
+    dependsOn 'e2eTest'
     dependsOn 'restTest'
 }
 
