--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.22.1'
+    compile 'com.h2database:h2:1.4.191'
 
     testCompile 'org.glassfish.jersey.core:jersey-client:2.22.1'
     testCompile 'org.glassfish.jersey.test-framework:jersey-test-framework-core:2.22.1'
@@ -58,10 +59,12 @@ sourceSets {
         java {
             srcDirs += file('src/e2eTest/java')
             srcDirs += file('src/restTest/java')
+            srcDirs += file('src/dbTest/java')
         }
         resources {
             srcDirs += file('src/e2eTest/resources')
             srcDirs += file('src/restTest/resources')
+            srcDirs += file('src/dbTest/resources')
         }
     }
 }
