--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.22.1'
     compile 'com.h2database:h2:1.4.191'
+    compile 'org.flywaydb:flyway-core:4.0'
 
     testCompile 'org.glassfish.jersey.core:jersey-client:2.22.1'
     testCompile 'org.glassfish.jersey.test-framework:jersey-test-framework-core:2.22.1'
