--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,9 @@
         A simple application with many layers to show how to test each layer.
     </description>
 
+    <listener>
+        <listener-class>co.tyec.layeredTestingExamples.database.H2FlywayServletContextListener</listener-class>
+    </listener>
     <filter>
         <filter-name>Jersey Filter</filter-name>
         <filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>
