--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ apply plugin: 'org.akhikhl.gretty'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
+configurations {
+    providedCompile
+}
 
 dependencies {
     //compile 'ch.qos.logback:logback-classic:1.1.3'
@@ -26,6 +29,7 @@ dependencies {
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.22.1'
     compile 'com.h2database:h2:1.4.191'
     compile 'org.flywaydb:flyway-core:4.0'
+    compile 'org.eclipse.jetty:jetty-webapp:9.2.12.v20150709'
 
     testCompile 'org.glassfish.jersey.core:jersey-client:2.22.1'
     testCompile 'org.glassfish.jersey.test-framework:jersey-test-framework-core:2.22.1'
@@ -112,4 +116,14 @@ tasks.withType(Test) {
         events 'started', 'passed', 'failed', 'skipped'
     }
     reports.html.destination = file("${reporting.baseDir}/${name}")
+}
+
+task runApp(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    classpath += configurations.providedCompile
+
+    main = 'co.tyec.layeredTestingExamples.MainApp'
+
+    // arguments to pass to the application
+    //args 'arg1'
 }
